--- a/src/content/docs/es/index.astro
+++ b/src/content/docs/es/index.astro
@@ -1,11 +1,11 @@
 ---
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
-import Personal from '../components/Personal.astro';
-import PreFooter from '../components/PreFooter.astro';
-import Projects from '../components/Projects.astro';
-import Layout from '../layouts/Layout.astro';
-import Bento from '../components/Bento.astro';
+import Footer from '../../../components/Footer.astro';
+import Header from '../../../components/Header.astro';
+import Personal from '../../../components/Personal.astro';
+import PreFooter from '../../../components/PreFooter.astro';
+import Projects from '../../../components/Projects.astro';
+import Layout from '../../../layouts/Layout.astro';
+import Bento from '../../../components/Bento.astro';
 ---
 
 <Layout title="Mauricio G. Olagaray Portfolio" 
