--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,19 +1,26 @@
 ---
+import '@fontsource-variable/onest'
+
 interface Props {
 	title: string;
+	description: string;
+	keyword: string;
+	author: string;
 }
 
-const { title } = Astro.props;
+const { title, description, keyword, author } = Astro.props;
+const { currentLocale } = Astro
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang={ currentLocale }>
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content={description} />
+		<meta name="keywords" content={keyword}>
+    	<meta name="author" content={author}>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
@@ -22,30 +29,68 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
+  		font-family: 'Onest Variable', sans-serif;
+		background: #135d66;
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+	body {
+		margin: 5%;
+	}
+	.neumorphism-flat {
+		box-shadow:  8px 8px 16px #0f4a52,
+					-8px -8px 16px #17707a;
+	}
+	.neumorphism-concave {
+		background: linear-gradient(145deg, #11545c, #14646d);
+		box-shadow: 8px 8px 16px #0f4a52,
+					8px 8px 16px #17707a;
+	}
+	.neumorphism-convex {
+		background: linear-gradient(145deg, #14646d, #11545c);
+		box-shadow: 8px 8px 16px #0f4a52,
+					8px 8px 16px #17707a;
+	}
+	.neumorphism-pressed {
+		box-shadow: inset 8px 8px 16px #0f4a52,
+					inset -8px -8px 16px #17707a;
+	}
+	.neumorphism-pressed-toggle {
+		box-shadow: inset 2px 2px 6px #0d4148,
+					inset -2px -2px 6px #8ed1d8;
+	}
+	.neumorphism-flat-toggle {
+		box-shadow: 2px 2px 4px #0c3e45,
+					-2px -2px 4px #7fb6bc;
+	}
+	.neumorphism-flat-text-lg {
+		text-shadow: -4px -4px 8px #17707a,
+		4px 4px 8px #0f4a52;
+	}
+	.neumorphism-flat-text-sm {
+		text-shadow: -2px -2px 6px #17707a,
+		2px 2px 6px #0f4a52;
+	}
+	.neumorphism-pressed-text-lg {
+		text-shadow: -4px -4px 8px #0f4a52,
+		4px 4px 8px #17707a;
+	}
+	.neumorphism-pressed-text-sm {
+		text-shadow: -2px -2px 6px #0f4a52,
+		2px 2px 6px #17707a;
+	}
+	a.neumorphism-flat-sm {
+		box-shadow:  4px 4px 8px #0f4a52,
+					-4px -4px 8px #17707a;
+		transition: all 0.5s ease-out;
+	}
+	a.neumorphism-flat-sm:hover {
+		box-shadow:  1px 1px 2px #0f4a52,
+					-1px -1px 2px #17707a;
+		transform: scale(.97);
+	}
+	strong {
+		color: #f6fcc7;
 	}
 </style>
