--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,9 +34,11 @@ const { currentLocale } = Astro
 	html {
   		font-family: 'Onest Variable', sans-serif;
 		background: #135d66;
+		padding: 50px;
 	}
 	body {
-		margin: 5%;
+		margin: 0 auto;
+		max-width: 1250px;
 	}
 	.neumorphism-flat {
 		box-shadow:  8px 8px 16px #0f4a52,
