--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 import Contact from "./Contact.astro";
 ---
 <footer class="neumorphism-flat mt-12 p-6 rounded-3xl text-site-300 flex justify-between">
-    <h4 class="text-sm text-pretty">© 2024 MauGarOla. <br/>Many Rights Reserved.</h4>
-    <Contact class="flex justify-between w-7/12"/>
+    <h4 class="text-sm text-pretty mr-5 my-auto md:mx-8">© 2024 MauGarOla. <br class="lg:hidden"/>Many Rights Reserved.</h4>
+    <Contact class="grid w-2/3 grid-cols-3 gap-y-6 sm:grid-cols-6 md:w-1/2 lg:w-1/3"/>
 </footer>
