--- a/src/components/PreFooter.astro
+++ b/src/components/PreFooter.astro
@@ -1,4 +1,4 @@
-<section class="neumorphism-flat mt-24 p-6 rounded-3xl text-site-300 grid grid-cols-3">
+<section id="#pre-footer" class="neumorphism-flat mt-24 p-6 rounded-3xl text-site-300 grid grid-cols-3">
     <h3>Resources</h3>
     <h3>Follow me</h3>
     <h3>Legal</h3>
@@ -18,7 +18,7 @@
         <li>Recepies</li>
     </ul>
     <ul>
-        <li>Privacy Policy</li>
-        <li>Terms & Conditions</li>
+        <li><a href="../privacy">Privacy Policy</a></li>
+        <li><a href="../terms">Terms & Conditions</a></li>
     </ul>
 </section>
