--- a/src/components/Personal.astro
+++ b/src/components/Personal.astro
@@ -16,3 +16,8 @@ import Contact from './Contact.astro'
     </p>
     <Contact class="neumorphism-pressed p-5 my-4 mx-auto rounded-2xl text-site-100 flex justify-around md:w-3/4 md:col-span-2 lg:col-span-1 lg:my-0"/>
 </main>
+<style>
+    strong {
+		color: #f6fcc7;
+	}
+</style>
