--- a/src/components/PreFooter.astro
+++ b/src/components/PreFooter.astro
@@ -1,24 +1,35 @@
-<section id="#pre-footer" class="neumorphism-flat mt-24 p-6 rounded-3xl text-site-300 grid grid-cols-3">
-    <h3>Resources</h3>
-    <h3>Follow me</h3>
-    <h3>Legal</h3>
-    <ul>
-        <li>Astro</li>
-        <li>Tailwind</li>
-        <li>TypeScript</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>TablerIcon</li>
-    </ul>
-    <ul>
-        <li>Instagram</li>
-        <li>Facebook</li>
-        <li>Blog</li>
-        <li>Travel Plans</li>
-        <li>Recepies</li>
-    </ul>
-    <ul>
-        <li><a href="../privacy">Privacy Policy</a></li>
-        <li><a href="../terms">Terms & Conditions</a></li>
-    </ul>
+<section class="neumorphism-flat mt-24 p-6 rounded-3xl text-site-300 flex justify-around">
+    <div>
+        <h3 class="neumorphism-pressed-text-sm text-site-100 text-lg font-semibold tracking-widest mb-3 mx-auto">Resources</h3>
+        <ul>
+            <li><a href="https://astro.build">Astro</a></li>
+            <li><a href="https://tailwindcss.com">Tailwind</a></li>
+            <li><a href="https://developer.mozilla.org/es/docs/Web/HTML">HTML</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS#">CSS</a></li>
+            <li><a href="https://tabler.io/icons">TablerIcon</a></li>
+            <li><a href="https://www.typescriptlang.org">TypeScript</a></li>
+        </ul>
+    </div>
+    <div>
+        <h3 class="neumorphism-pressed-text-sm text-site-100 text-lg font-bold tracking-widest mb-3 mx-auto">Legal</h3>
+        <ul>
+            <li><a href="../privacy">Privacy Policy</a></li>
+            <li><a href="../terms">Terms & Conditions</a></li>
+        </ul>
+    </div>
+    <div>
+        <h3 class="neumorphism-pressed-text-sm text-site-100 text-lg font-bold tracking-widest mb-3 mx-auto">Follow me</h3>
+        <ul>
+            <li><a href="https://www.instagram.com/maugarola/">Instagram</a></li>
+            <li><a href="https://www.facebook.com/maugarola/">Facebook</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Travel Plans</a></li>
+            <li><a href="">Recepies</a></li>
+        </ul>
+    </div>
 </section>
+<style>
+    a:hover {
+        color: #f6fcc7;
+    }
+</style>
