pre-footer-style

--- a/src/components/PreFooter.astro
+++ b/src/components/PreFooter.astro
@@ -1,6 +1,6 @@
-<section class="neumorphism-flat mt-24 p-6 rounded-3xl text-site-300 flex justify-around">
-    <div>
-        <h3 class="neumorphism-pressed-text-sm text-site-100 text-lg font-semibold tracking-widest mb-3 mx-auto">Resources</h3>
+<section class="neumorphism-pressed mt-24 p-6 rounded-3xl text-site-300 text-sm gap-8 flex justify-around">
+    <div class="neumorphism-flat-sm rounded-2xl p-4">
+        <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-semibold tracking-widest mb-3 mx-auto">Resources</h3>
         <ul>
             <li><a href="https://astro.build">Astro</a></li>
             <li><a href="https://tailwindcss.com">Tailwind</a></li>
@@ -10,15 +10,15 @@
             <li><a href="https://www.typescriptlang.org">TypeScript</a></li>
         </ul>
     </div>
-    <div>
-        <h3 class="neumorphism-pressed-text-sm text-site-100 text-lg font-bold tracking-widest mb-3 mx-auto">Legal</h3>
+    <div class="neumorphism-flat-sm rounded-2xl p-4">
+        <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-bold tracking-widest mb-3 mx-auto">Legal</h3>
         <ul>
             <li><a href="../privacy">Privacy Policy</a></li>
             <li><a href="../terms">Terms & Conditions</a></li>
         </ul>
     </div>
-    <div>
-        <h3 class="neumorphism-pressed-text-sm text-site-100 text-lg font-bold tracking-widest mb-3 mx-auto">Follow me</h3>
+    <div class="neumorphism-flat-sm rounded-2xl p-4">
+        <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-bold tracking-widest mb-3 mx-auto">Follow me</h3>
         <ul>
             <li><a href="https://www.instagram.com/maugarola/">Instagram</a></li>
             <li><a href="https://www.facebook.com/maugarola/">Facebook</a></li>
@@ -31,5 +31,9 @@
 <style>
     a:hover {
         color: #f6fcc7;
+    }
+    .neumorphism-flat-sm {
+		box-shadow:  4px 4px 8px #0f4a52,
+					-4px -4px 8px #17707a;
     }
 </style>
