--- a/src/components/Filters.astro
+++ b/src/components/Filters.astro
@@ -1,10 +1,14 @@
 ---
 import Filter from './Filter.astro'
 import Html from "./logos/Html.astro";
+import MGO from "./logos/MGO.astro";
 ---
 <nav class="mt-12 mb-6 text-site-300">
     <Filter>
         <Html />
+    </Filter>
+    <Filter>
+        <MGO />
     </Filter>
     <Filter />
     <Filter />
