--- a/src/components/Filter.astro
+++ b/src/components/Filter.astro
@@ -1,6 +1,6 @@
 ---
-import Html from "./logos/Html.astro";
+
 ---
-<button class="neumorphism-flat px-3 py-1 rounded-full">
+<button class={`${Astro.props.class} neumorphism-flat px-4 py-2 rounded-full flex gap-2`}>
     <slot/>
 </button>
