--- a/src/components/PreFooter.astro
+++ b/src/components/PreFooter.astro
@@ -1,4 +1,4 @@
-<section class="neumorphism-pressed mt-24 p-6 rounded-3xl text-site-300 text-sm gap-8 flex justify-around">
+<section class="neumorphism-pressed mt-24 p-6 rounded-3xl text-site-300 text-sm text-center gap-8 grid pre-footer">
     <div class="neumorphism-flat-sm rounded-2xl p-4">
         <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-semibold tracking-widest mb-3 mx-auto">Resources</h3>
         <ul>
@@ -35,5 +35,8 @@
     .neumorphism-flat-sm {
 		box-shadow:  4px 4px 8px #0f4a52,
 					-4px -4px 8px #17707a;
+    }
+    .pre-footer {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
 </style>
