--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -2,7 +2,7 @@
 import BentoItem from './BentoItem.astro'
 ---
 <h1 class="neumorphism-pressed-text-sm text-6xl mt-24 font-bold text-site-300">About me</h1>
-<section class="w-full grid grid-cols-12 gap-6 mx-auto mt-4 text-lg md:text-3xl">
+<section class="bento w-full grid grid-cols-12 gap-6 mx-auto mt-4 text-lg md:text-3xl">
     <BentoItem class="col-span-8 row-span-2 bg-site-300 text-site-600" title="Meditation"/>
     <BentoItem class="col-span-4 row-span-3 bg-site-200 text-site-800" title="Climbing"/>
     <BentoItem class="col-span-4 row-span-1 bg-site-600 text-site-100" title="Traveling"/>
@@ -10,6 +10,6 @@ import BentoItem from './BentoItem.astro'
     <BentoItem class="col-span-4 row-span-4 bg-site-800 text-site-300" title="Music"/>
     <BentoItem class="col-span-4 row-span-1 bg-site-800 text-site-300" title="Birthday"/>
     <BentoItem class="col-span-8 row-span-2 bg-site-600 text-site-100" title="Organiced"/>
-    <BentoItem class="col-span-3 row-span-1 bg-site-300 text-site-600" title="Yoga"/>
-    <BentoItem class="col-span-5 row-span-1 bg-site-200 text-site-800" title="Learning"/>
+    <BentoItem class="col-span-3 row-span-1 bg-site-200 text-site-800" title="Yoga"/>
+    <BentoItem class="col-span-5 row-span-1 bg-site-300 text-site-600" title="Learning"/>
 </section>
