--- a/src/components/Personal.astro
+++ b/src/components/Personal.astro
@@ -3,7 +3,7 @@ import PersonalPicture from './PersonalPicture.astro'
 import Contact from './Contact.astro'
 ---
 <main class="neuphormism-flat mx-auto p-10 block md:grid md:grid-cols-2 lg:gap-y-5 ">
-    <PersonalPicture class="neumorphism-flat mx-auto md:m-auto my-6 size-64 md:size-80 p-2 rounded-full"/>
+    <PersonalPicture class="neumorphism-concave mx-auto md:m-auto my-6 size-64 md:size-80 p-3 rounded-full"/>
     <section class="m-auto md:pr-12 lg:row-span-2">
         <h2 class="neumorphism-pressed-text-sm text-site-300 text-4xl lg:text-5xl font-bold text-center tracking-widest md:text-right">Portfolio</h2>
         <h1 class="neumorphism-flat-text-lg text-site-100 text-5xl lg:text-7xl font-bold tracking-wider text-center mt-5 mb-7 md:text-right">Mauricio<br>Olagaray</h1>
