--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,3 +1,3 @@
-<div>
+<div class="neumorphism-pressed rounded-2xl p-4">
     <img class="h-auto max-w-full rounded-lg" src="https://addyou.es/wp-content/uploads/2023/10/lenguajes_Csharp-1024x576.png" alt="">
 </div>
