--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,7 @@ import Filters from './Filters.astro'
 ---
 <h1 class="neumorphism-pressed-text-sm text-6xl mt-24 font-bold text-site-300">Projects</h1>
 <Filters />
-<div class="neumorphism-pressed rounded-3xl p-5 grid grid-cols-2 md:grid-cols-3 gap-4">
+<div class="projects neumorphism-flat rounded-3xl p-5 grid gap-4">
     <Project />
     <Project />
     <Project />
@@ -12,3 +12,8 @@ import Filters from './Filters.astro'
     <Project />
     <Project />
 </div>
+<style>
+    .projects {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+</style>
