--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -92,4 +92,9 @@ const { currentLocale } = Astro
 					-1px -1px 2px #17707a;
 		transform: scale(.97);
 	}
+	a.neumorphism-flat-sm:active {
+		box-shadow: inset 4px 4px 8px #0f4a58,
+					inset -4px -4px 8px #17707a;
+		transform: scale(.94);
+	}
 </style>
