--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -1,8 +1,8 @@
 ---
 import BentoItem from './BentoItem.astro'
 ---
-<h1 class="neumorphism-pressed-text-sm text-6xl mt-24 font-bold text-site-300">About me</h1>
-<section class="bento w-full grid grid-cols-12 gap-6 mx-auto mt-4 text-lg md:text-3xl">
+<h1 class="neumorphism-pressed-text-sm text-6xl text-center md:text-left mt-24 font-bold text-site-300">About me</h1>
+<section class="bento w-full grid grid-cols-12 gap-6 mx-auto mt-12 text-lg md:text-3xl">
     <BentoItem class="col-span-8 row-span-2 bg-site-300 text-site-600" title="Meditation"/>
     <BentoItem class="col-span-4 row-span-3 bg-site-200 text-site-800" title="Climbing"/>
     <BentoItem class="col-span-4 row-span-1 bg-site-600 text-site-100" title="Traveling"/>
