--- a/src/components/Filters.astro
+++ b/src/components/Filters.astro
@@ -7,9 +7,14 @@ import TypeScript from "./logos/TypeScript.astro";
 import JavaScript from "./logos/JavaScript.astro";
 import React from "./logos/React.astro";
 import Tailwind from "./logos/Tailwind.astro";
+import NoFilter from "./logos/NoFilter.astro";
 import MGO from "./logos/MGO.astro";
 ---
 <nav class="mt-12 mb-8 mx-5 text-site-300 flex gap-5 justify-center flex-wrap">
+    <Filter class="hover:text-site-200 ">
+        <NoFilter />
+        <h1>No filter</h1>
+    </Filter>
     <Filter class="hover:text-[#E44D26] ">
         <Html />
         <h1>Html</h1>
