--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,7 +2,7 @@
 import Project from './Project.astro'
 import Filters from './Filters.astro'
 ---
-<h1 class="neumorphism-pressed-text-sm text-6xl mt-24 font-bold text-site-300">Projects</h1>
+<h1 class="neumorphism-pressed-text-sm text-center md:text-left text-6xl mt-24 font-bold text-site-300">Projects</h1>
 <Filters />
 <div class="projects neumorphism-flat rounded-3xl p-5 grid gap-4">
     <Project />
