--- a/src/components/BentoItem.astro
+++ b/src/components/BentoItem.astro
@@ -6,7 +6,7 @@ interface Props {
 const { title } = Astro.props
 ---
 
-<article class={`${Astro.props.class} neumorphism-flat rounded-3xl p-3 text-center sm:text-right sm:p-5`}>
+<article class={`${Astro.props.class} neumorphism-flat rounded-3xl p-3 text-center sm:text-left sm:p-5`}>
     <h3 class="font-bold text-md sm:text-2xl">{title}</h3>
     <slot name="image"></slot>
     <slot name="content"></slot>
