--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,3 +1,14 @@
-<div class="neumorphism-pressed rounded-2xl p-4">
+---
+
+interface Props {
+    title: string
+    description: string
+}
+
+const { title, description } = Astro.props
+---
+<div class="neumorphism-pressed rounded-2xl p-3 sm:p-5">
     <img class="h-auto max-w-full rounded-lg" src="https://addyou.es/wp-content/uploads/2023/10/lenguajes_Csharp-1024x576.png" alt="">
+    <h1 class="mt-6 text-site-200 font-bold text-md sm:text-2xl">{title}</h1>
+    <p class="mt-3 text-site-300 sm:text-lg lg:text-3xl">{description}</p>
 </div>
