--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -97,4 +97,7 @@ const { currentLocale } = Astro
 					inset -4px -4px 8px #17707a;
 		transform: scale(.94);
 	}
+	strong {
+		color: #f6fcc7;
+	}
 </style>
