--- a/src/components/Personal.astro
+++ b/src/components/Personal.astro
@@ -1,23 +1,22 @@
 ---
 import PersonalPicture from './PersonalPicture.astro'
 import Contact from './Contact.astro'
+import { getI18N } from "../i18n"
+
+const { currentLocale } = Astro
+const i18n = getI18N({ currentLocale })
 ---
 <main class="neuphormism-flat mx-auto p-10 block md:grid md:grid-cols-2 lg:gap-y-5 ">
     <PersonalPicture class="neumorphism-concave mx-auto md:m-auto my-6 size-64 md:size-80 p-3 rounded-full"/>
     <section class="m-auto md:pr-12 lg:row-span-2">
-        <h2 class="neumorphism-pressed-text-sm text-site-300 text-4xl lg:text-5xl font-bold text-center tracking-widest md:text-right">Portfolio</h2>
+        <h2 class="neumorphism-pressed-text-sm text-site-300 text-4xl lg:text-5xl font-bold text-center tracking-widest md:text-right">{i18n.PERSONAL.TITLE}</h2>
         <h1 class="neumorphism-flat-text-lg text-site-100 text-5xl lg:text-7xl font-bold tracking-wider text-center mt-5 mb-7 md:text-right">Mauricio<br>Olagaray</h1>
-        <h3 class="neumorphism-pressed-text-sm text-site-300 text-3xl lg:text-4xl font-bold text-center tracking-widest md:text-right">Frontend Developer</h3>
+        <h3 class="neumorphism-pressed-text-sm text-site-300 text-3xl lg:text-4xl font-bold text-center tracking-widest md:text-right">{i18n.PERSONAL.SUBTITLE}</h3>
     </section>
-    <p class="md:col-span-2 my-20 w-3/4 mx-auto text-center text-pretty text-site-100 text-2xl lg:col-span-1 lg:row-span-2 lg:my-0 justify-items-end">
-        Hi! I'm a <strong>trilingual</strong> professional based in 
+    <p class="md:col-span-2 my-20 w-3/4 mx-auto text-center text-pretty text-site-100 text-2xl lg:col-span-1 lg:row-span-2 lg:my-0 justify-items-end" set:html={i18n.PERSONAL.PARAGRAPHS}>
+        <!-- Hi! I'm a <strong>trilingual</strong> professional based in 
         <strong>Europe</strong>, specializing in the development of 
-        unique and creative <strong>web applications.</strong>
+        unique and creative <strong>web applications.</strong> -->
     </p>
     <Contact class="neumorphism-pressed p-5 my-4 mx-auto rounded-2xl text-site-100 md:w-3/4 md:col-span-2 lg:col-span-1 lg:my-0 grid grid-cols-3 gap-y-6 sm:grid-cols-6"/>
 </main>
-<style>
-    strong {
-		color: #f6fcc7;
-	}
-</style>
