--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,8 +1,12 @@
 ---
 import Project from './Project.astro'
 import Filters from './Filters.astro'
+import { getI18N } from "../i18n"
+
+const { currentLocale } = Astro
+const i18n = getI18N({ currentLocale })
 ---
-<h1 class="neumorphism-pressed-text-sm text-center md:text-left text-6xl mt-24 font-bold text-site-300">Projects</h1>
+<h1 class="neumorphism-pressed-text-sm text-center md:text-left text-6xl mt-24 font-bold text-site-300">{i18n.PROJECTS.TITLE}</h1>
 <Filters />
 <div class="projects neumorphism-flat rounded-3xl p-3 sm:p-5 grid gap-4">
     <Project title="Quote-Image" description="An inspirational quote image generator."/>
