--- a/src/components/pages/Terms.astro
+++ b/src/components/pages/Terms.astro
@@ -11,7 +11,7 @@ const i18n = getI18N({ currentLocale })
 		author="Mauricio G. Olagaray">
 	<section class="neumorphism-flat rounded-3xl overflow-hidden p-6 text-site-100">
         <a  href="./" class="neumorphism-flat-sm p-2 rounded-full hover:text-site-200 m-auto">{i18n.TERMS.BACK}</a>
-		<h1 class="neumorphism-flat-text-lg text-site-200 text-3xl md:text-5xl lg:text-7xl font-bold tracking-wider mt-8 mb-4 md:text-right">{i18n.TERMS.TITLE}</h1>
+		<h1 class="neumorphism-flat-text-lg text-site-200 text-3xl md:text-5xl lg:text-7xl font-bold tracking-wider mt-8 mb-4 md:text-left">{i18n.TERMS.TITLE}</h1>
         <p>{i18n.TERMS.UPDATE}</p>
         <p>{i18n.TERMS.DESCRIPTION}.</p>
         <h2 class="neumorphism-pressed-text-sm text-site-300 text-lg font-bold tracking-widest md:text-left mt-8 mb-4">{i18n.TERMS.SECTION_1.TITLE}</h2>
