--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,13 +8,13 @@ const i18n = getI18N({ currentLocale })
 ---
 <h1 class="neumorphism-pressed-text-sm text-center md:text-left text-6xl mt-24 font-bold text-site-300">{i18n.PROJECTS.TITLE}</h1>
 <Filters />
-<div class="projects neumorphism-flat rounded-3xl p-3 sm:p-5 grid gap-4">
+<div class="projects neumorphism-flat rounded-3xl p-10 grid gap-10">
     <Project title="Quote-Image" description="An inspirational quote image generator."/>
     <Project title="Garage-Sale" description="Web to control your items at your garage sales."/>
-    <Project title="Tic-tac-toe-Extrem" description="An advanced version of the classic tic-tac-toe game."/>
+    <!-- <Project title="Tic-tac-toe-Extrem" description="An advanced version of the classic tic-tac-toe game."/>
     <Project title="Sound-Maaker" description="A tool for create sound effects."/>
     <Project title="Tiny-Piano" description="A miniature virtual piano for practicing and enjoying music."/>
-    <Project title="Typing-test" description="A typing speed test to improve your typing skills."/>
+    <Project title="Typing-test" description="A typing speed test to improve your typing skills."/> -->
 </div>
 <style>
     .projects {
