--- a/src/components/Languages.astro
+++ b/src/components/Languages.astro
@@ -9,7 +9,7 @@ const translatePath = useTranslatedPath(lang);
 const currentLocaleData = LANGUAGES[lang]
 const otherLocales = Object.values(LANGUAGES)
 ---
-<section class="flex justify-between ">
+<section class="flex justify-between dark:text-site-50">
     <a href="/en">
         {currentLocaleData.code === 'en' ?
      <h4 class="text-site-200">en</h4> :
