--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -2,11 +2,11 @@
 import Moon from './logos/Moon.astro'
 import Sun from './logos/Sun.astro'
 ---
-<label id="theme-selector" class="inline-flex items-center cursor-pointer">
-  <h3 class="mr-3 text-site-200 dark:text-site-300">
+<label class="inline-flex items-center cursor-pointer">
+  <h3 class="mr-3 text-site-200 dark:text-site-50">
     <Sun />
   </h3>
-  <input type="checkbox" value="" class="sr-only peer">
+  <input type="checkbox" value="" class="sr-only peer" id="dark-mode">
   <figure class="neumorphism-pressed-toggle relative w-14 h-8 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-site-200 dark:peer-focus:ring-site-200 rounded-full peer dark:bg-[#232323] peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-site-300 dark:peer-checked:after:border-[#232323] after:content-[''] after:absolute after:top-[4px] after:start-[6px] after:bg-site-300 dark:after:bg-[#232323] after:border-site-300 dark:after:border-site-300 after:border after:rounded-full after:w-6 after:h-6 after:transition-all dark:border-[#232323] peer-checked:bg-site-200"></figure>
   <h3 class="ml-3 dark:text-site-200">
     <Moon />
@@ -14,13 +14,29 @@ import Sun from './logos/Sun.astro'
 </label>
 
 <script>
-  document.getElementById('theme-selector')?.addEventListener('click', () => {
-    if (localStorage.theme === 'dark') {
-      localStorage.theme = 'light';
-      document.documentElement.classList.remove('dark');
+enum DarkMode {
+    Light = 'light',
+    Dark = 'dark'
+}
+
+function toggleDarkMode() {
+    const darkMode = document.getElementById('dark-mode') as HTMLInputElement;
+
+    if (darkMode.checked) {
+        localStorage.theme = DarkMode.Dark;
+        document.documentElement.classList.add('dark');
     } else {
-      localStorage.theme = 'dark';
-      document.documentElement.classList.add('dark');
+        localStorage.theme = DarkMode.Light;
+        document.documentElement.classList.remove('dark');
     }
-  });
+}
+
+const darkMode = document.getElementById('dark-mode') as HTMLInputElement;
+darkMode.addEventListener('change', toggleDarkMode);
+
+const savedTheme = localStorage.theme;
+if (savedTheme === DarkMode.Dark) {
+    darkMode.checked = true;
+    document.documentElement.classList.add('dark');
+}
 </script>
