--- a/src/components/Filters.astro
+++ b/src/components/Filters.astro
@@ -13,7 +13,7 @@ import { getI18N } from "../i18n"
 const { currentLocale } = Astro
 const i18n = getI18N({ currentLocale })
 ---
-<nav class="mt-12 mb-8 mx-5 text-site-300 flex gap-5 justify-center flex-wrap">
+<nav class="mt-12 mb-8 mx-5 text-site-300 flex gap-5 justify-center flex-wrap dark:text-site-50">
     <Filter class="hover:text-site-200 ">
         <NoFilter />
         <h1>{i18n.PROJECTS.FILTER}</h1>
