--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import { getI18N } from "../i18n"
 const { currentLocale } = Astro
 const i18n = getI18N({ currentLocale })
 ---
-<footer class="neumorphism-pressed mt-12 p-6 rounded-3xl text-site-300 flex justify-between">
+<footer class="neumorphism-pressed mt-12 p-6 rounded-3xl text-site-300 flex justify-between dark:text-site-50">
     <h4 class="text-sm text-pretty mr-5 my-auto md:mx-8">© 2024 MauGarOla. <br class="lg:hidden"/>{i18n.FOOTER}</h4>
     <Contact class="w-2/3 md:w-1/2 lg:w-1/3 grid grid-cols-3 gap-y-6 sm:grid-cols-6"/>
 </footer>
