--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import Languages from './Languages.astro'
 ---
 
 <nav class="neumorphism-pressed mt-5 mx-5 rounded-2xl p-5 text-site-300 text-2xl flex justify-between items-center">
-    <DarkMode />
+    <DarkMode client:visible/>
     <ThemeColor />
     <Languages />
 </nav>
