--- a/src/components/PreFooter.astro
+++ b/src/components/PreFooter.astro
@@ -4,9 +4,9 @@ import { getI18N } from "../i18n"
 const { currentLocale } = Astro
 const i18n = getI18N({ currentLocale })
 ---
-<section class="neumorphism-pressed mt-24 p-6 rounded-3xl text-site-300 text-sm text-center gap-8 grid pre-footer">
+<section class="neumorphism-pressed mt-24 p-6 rounded-3xl text-site-300 text-sm text-center gap-8 grid pre-footer dark:text-site-50">
     <div class="neumorphism-flat-sm rounded-2xl p-4">
-        <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-semibold tracking-widest mb-3 mx-auto">{i18n.PRE_FOOTER.SECTION_1.TITLE}</h3>
+        <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-semibold tracking-widest mb-3 mx-auto dark:text-site-200">{i18n.PRE_FOOTER.SECTION_1.TITLE}</h3>
         <ul>
             <li><a href="https://astro.build">Astro</a></li>
             <li><a href="https://tailwindcss.com">Tailwind</a></li>
@@ -17,14 +17,14 @@ const i18n = getI18N({ currentLocale })
         </ul>
     </div>
     <div class="neumorphism-flat-sm rounded-2xl p-4">
-        <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-bold tracking-widest mb-3 mx-auto">{i18n.PRE_FOOTER.SECTION_2.TITLE}</h3>
+        <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-bold tracking-widest mb-3 mx-auto dark:text-site-200">{i18n.PRE_FOOTER.SECTION_2.TITLE}</h3>
         <ul>
             <li><a href=`/${i18n.LANG}/privacy`>{i18n.PRE_FOOTER.SECTION_2.SUBTITLE_1}</a></li>
             <li><a href=`/${i18n.LANG}/terms`>{i18n.PRE_FOOTER.SECTION_2.SUBTITLE_2}</a></li>
         </ul>
     </div>
     <div class="neumorphism-flat-sm rounded-2xl p-4">
-        <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-bold tracking-widest mb-3 mx-auto">{i18n.PRE_FOOTER.SECTION_3.TITLE}</h3>
+        <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-bold tracking-widest mb-3 mx-auto dark:text-site-200">{i18n.PRE_FOOTER.SECTION_3.TITLE}</h3>
         <ul>
             <li><a href="https://www.instagram.com/maugarola/">Instagram</a></li>
             <li><a href="https://www.facebook.com/maugarola/">Facebook</a></li>
