--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -10,5 +10,5 @@ const { title, description } = Astro.props
 <div class=`${Astro.props.class} neumorphism-pressed rounded-2xl p-3 sm:p-5 mb-5 md:mb-0`>
     <img class="h-auto max-w-full rounded-lg" src=`../../public/${title}.webp` alt=`Screen shot of the preject ${title}`>
     <h1 class="mt-6 text-site-200 font-bold text-md sm:text-2xl">{title}</h1>
-    <p class="mt-3 text-site-300 sm:text-lg lg:text-3xl">{description}</p>
+    <p class="mt-3 sm:text-lg lg:text-3xl">{description}</p>
 </div>
