--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,9 +6,9 @@ import { getI18N } from "../i18n"
 const { currentLocale } = Astro
 const i18n = getI18N({ currentLocale })
 ---
-<h1 class="neumorphism-pressed-text-sm text-center md:text-left text-6xl mt-24 font-bold text-site-300">{i18n.PROJECTS.TITLE}</h1>
+<h1 class="neumorphism-pressed-text-sm text-center md:text-left text-6xl mt-24 font-bold text-site-300 dark:text-site-50">{i18n.PROJECTS.TITLE}</h1>
 <Filters />
-<div class="projects neumorphism-flat rounded-3xl md:grid p-5 md:gap-5 ">
+<div class="projects neumorphism-flat rounded-3xl md:grid p-5 md:gap-5 dark:text-site-50">
     <Project title="Quote-Image" description="An inspirational quote image generator." />
     <Project title="Garage-Sale" description="Web to control your items at your garage sales." class="mb-0"/> <!-- Use margin 0 on the last item -->
     <!-- <Project title="Tic-tac-toe-Extrem" description="An advanced version of the classic tic-tac-toe game."/>
