--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,6 @@
 ---
 import '@fontsource-variable/onest'
 import ViewTransitions from 'astro/components/ViewTransitions.astro';
-import DarkMode from '../components/DarkMode.tsx'
-import ThemeToggle from '../components/ThemeToggle.tsx'
 
 interface Props {
 	title: string;
@@ -26,6 +24,16 @@ const { currentLocale } = Astro
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>{title}</title>
 		<ViewTransitions />
+		<script is:inline>
+			if (
+			  localStorage.theme === 'dark' ||
+			  (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
+			) {
+			  document.documentElement.classList.add('dark');
+			} else {
+			  document.documentElement.classList.remove('dark');
+			}
+		</script>
 	</head>
 	<body>
 		<slot />
@@ -37,148 +45,189 @@ const { currentLocale } = Astro
 	}
 	html {
   		font-family: 'Onest Variable', sans-serif;
-		background: #135d66;
 		padding: 25px;
 	}
 	body {
 		margin: 0 auto;
 		max-width: 1250px;
+		background: #135d66;
+		transition: all 0.3s;
 	}
 	.neumorphism-flat {
+		transition: all 0.3s;
 		box-shadow:  8px 8px 16px #0f4a52,
 					-8px -8px 16px #17707a;
 	}
 	.neumorphism-concave {
+		transition: all 0.3s;
 		background: linear-gradient(145deg, #11545c, #14646d);
 		box-shadow: 8px 8px 16px #0f4a52,
 					8px 8px 16px #17707a;
 	}
 	.neumorphism-convex {
+		transition: all 0.3s;
 		background: linear-gradient(145deg, #14646d, #11545c);
 		box-shadow: 8px 8px 16px #0f4a52,
 					8px 8px 16px #17707a;
 	}
 	.neumorphism-pressed {
+		transition: all 0.3s;
 		box-shadow: inset 8px 8px 16px #0f4a52,
 					inset -8px -8px 16px #17707a;
 	}
 	.neumorphism-pressed-toggle {
+		transition: all 0.3s;
 		box-shadow: inset 1px 1px 2px #0d4148,
 					inset -1px -1px 2px #8ed1d8;
 	}
 	.neumorphism-flat-toggle {
+		transition: all 0.3s;
 		box-shadow: 2px 2px 4px #0c3e45,
 					-2px -2px 4px #7fb6bc;
 	}
 	.neumorphism-flat-text-lg {
+		transition: all 0.3s;
 		text-shadow: -4px -4px 8px #17707a,
 					4px 4px 8px #0f4a52;
 	}
 	.neumorphism-flat-text-sm {
+		transition: all 0.3s;
 		text-shadow: -2px -2px 6px #17707a,
 					2px 2px 6px #0f4a52;
 	}
 	.neumorphism-pressed-text-lg {
+		transition: all 0.3s;
 		text-shadow: -4px -4px 8px #0f4a52,
 					4px 4px 8px #17707a;
 	}
 	.neumorphism-pressed-text-sm {
+		transition: all 0.3s;
 		text-shadow: -2px -2px 6px #0f4a52,
 					2px 2px 6px #17707a;
 	}
 	a.neumorphism-flat-sm {
+		transition: all 0.3s;
 		box-shadow:  4px 4px 8px #0f4a52,
 					-4px -4px 8px #17707a;
-		transition: all 0.5s ease-out;
 	}
 	a.neumorphism-flat-sm:hover {
+		transition: all 0.3s;
 		box-shadow:  1px 1px 2px #0f4a52,
 					-1px -1px 2px #17707a;
 		transform: scale(.97);
 	}
 	a.neumorphism-flat-sm:active {
+		transition: all 0.3s;
 		box-shadow: inset 4px 4px 8px #0f4a58,
 					inset -4px -4px 8px #17707a;
 		transform: scale(.94);
 	}
 	.neumorphism-flat-sm {
+		transition: all 0.3s;
 		box-shadow:  4px 4px 8px #0f4a52,
 					-4px -4px 8px #17707a;
     }
 	strong {
+		transition: all 0.3s;
 		color: #f6fcc7;
 	}
+	.filter {
+        transition: all 0.3s ease-out;
+    }
+    .filter:hover {
+        box-shadow:  1px 1px 2px #0f4a52,
+					-1px -1px 2px #17707a;
+        transform: scale(.97);
+    }
+    .filter:active {
+        box-shadow: inset 4px 4px 8px #0f4a52,
+					inset -4px -4px 8px #17707a;
+        transform: scale(.94);
+    }
 
-	@media (prefers-color-scheme: dark) {
-		html {
+	.dark {
+		& body {
 			background: #191919;
 			color: #ffffff;
 		}
-		.neumorphism-flat {
+		& .neumorphism-flat {
 			box-shadow:  8px 8px 16px #111111, 
 						-8px -8px 16px #232323; 
 		}
-		.neumorphism-concave {
+		& .neumorphism-concave {
 			background: linear-gradient(145deg, #1f1f1f, #222222); 
 			box-shadow: 8px 8px 16px #111111, 
 						8px 8px 16px #232323; 
 		}
-		.neumorphism-convex {
+		& .neumorphism-convex {
 			background: linear-gradient(145deg, #222222, #1f1f1f); 
 			box-shadow: 8px 8px 16px #111111, 
 						8px 8px 16px #232323; 
 		}
-		.neumorphism-pressed {
+		& .neumorphism-pressed {
 			box-shadow: inset 8px 8px 16px #111111, 
 						inset -8px -8px 16px #232323; 
 		}
-		.neumorphism-pressed-toggle {
+		& .neumorphism-pressed-toggle {
 			box-shadow: inset 1px 1px 2px #101010, 
 						inset -1px -1px 2px #555555; 
 		}
-		.neumorphism-flat-toggle {
+		& .neumorphism-flat-toggle {
 			box-shadow: 2px 2px 4px #101010, 
 						-2px -2px 4px #555555; 
 		}
-		.neumorphism-flat-text-lg {
+		& .neumorphism-flat-text-lg {
 			text-shadow: -4px -4px 8px #232323, 
 						4px 4px 8px #111111; 
 		}
-		.neumorphism-flat-text-sm {
+		& .neumorphism-flat-text-sm {
 			text-shadow: -2px -2px 6px #232323, 
 						2px 2px 6px #111111; 
 		}
-		.neumorphism-pressed-text-lg {
+		& .neumorphism-pressed-text-lg {
 			text-shadow: -4px -4px 8px #111111, 
 						4px 4px 8px #232323; 
 		}
-		.neumorphism-pressed-text-sm {
+		& .neumorphism-pressed-text-sm {
 			text-shadow: -2px -2px 6px #111111, 
 						2px 2px 6px #232323; 
 		}
-		a.neumorphism-flat-sm {
+		& a.neumorphism-flat-sm {
 			box-shadow:  4px 4px 8px #111111, 
 						-4px -4px 8px #232323; 
 			transition: all 0.5s ease-out;
 		}
-		a.neumorphism-flat-sm:hover {
+		& a.neumorphism-flat-sm:hover {
 			box-shadow:  1px 1px 2px #111111, 
 						-1px -1px 2px #232323; 
 			transform: scale(.97);
 		}
-		a.neumorphism-flat-sm:active {
+		& a.neumorphism-flat-sm:active {
 			box-shadow: inset 4px 4px 8px #111111, 
 						inset -4px -4px 8px #232323; 
 			transform: scale(.94);
 		}
-		.neumorphism-flat-sm {
+		& .neumorphism-flat-sm {
 		box-shadow:  4px 4px 8px #111111,
 					-4px -4px 8px #232323;
 		}
-		strong {
+		& strong {
 			color: #f6fcc7;
 		}
+		& .filter {
+            transition: all 0.3s ease-out;
+        }
+        & .filter:hover {
+            box-shadow:  1px 1px 2px #111111,
+                        -1px -1px 2px #232323;
+            transform: scale(.97);
+        }
+        & .filter:active {
+            box-shadow: inset 4px 4px 8px #111111,
+                        inset -4px -4px 8px #232323;
+            transform: scale(.94);
+        }
 
 	}
-
+	
 </style>
