--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -6,7 +6,7 @@ import Sun from './logos/Sun.astro'
   <h3 class="mr-3 text-site-200 dark:text-site-50">
     <Sun />
   </h3>
-  <input type="checkbox" value="" class="sr-only peer" id="dark-mode">
+  <input type="checkbox" value="" class="sr-only peer" id="dark-mode" />
   <figure class="neumorphism-pressed-toggle relative w-14 h-8 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-site-200 dark:peer-focus:ring-site-200 rounded-full peer dark:bg-[#232323] peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-site-300 dark:peer-checked:after:border-[#232323] after:content-[''] after:absolute after:top-[4px] after:start-[6px] after:bg-site-300 dark:after:bg-[#232323] after:border-site-300 dark:after:border-site-300 after:border after:rounded-full after:w-6 after:h-6 after:transition-all dark:border-[#232323] peer-checked:bg-site-200"></figure>
   <h3 class="ml-3 dark:text-site-200">
     <Moon />
@@ -14,29 +14,29 @@ import Sun from './logos/Sun.astro'
 </label>
 
 <script>
-enum DarkMode {
-    Light = 'light',
-    Dark = 'dark'
-}
+  enum DarkMode {
+      Light = 'light',
+      Dark = 'dark'
+  }
 
-function toggleDarkMode() {
-    const darkMode = document.getElementById('dark-mode') as HTMLInputElement;
+  function toggleDarkMode() {
+      const darkMode = document.getElementById('dark-mode') as HTMLInputElement;
 
-    if (darkMode.checked) {
-        localStorage.theme = DarkMode.Dark;
-        document.documentElement.classList.add('dark');
-    } else {
-        localStorage.theme = DarkMode.Light;
-        document.documentElement.classList.remove('dark');
-    }
-}
+      if (darkMode.checked) {
+          localStorage.theme = DarkMode.Dark;
+          document.documentElement.classList.add('dark');
+      } else {
+          localStorage.theme = DarkMode.Light;
+          document.documentElement.classList.remove('dark');
+      }
+  }
 
-const darkMode = document.getElementById('dark-mode') as HTMLInputElement;
-darkMode.addEventListener('change', toggleDarkMode);
+  const darkMode = document.getElementById('dark-mode') as HTMLInputElement;
+  darkMode.addEventListener('change', toggleDarkMode);
 
-const savedTheme = localStorage.theme;
-if (savedTheme === DarkMode.Dark) {
-    darkMode.checked = true;
-    document.documentElement.classList.add('dark');
-}
+  const savedTheme = localStorage.theme;
+  if (savedTheme === DarkMode.Dark) {
+      darkMode.checked = true;
+      document.documentElement.classList.add('dark');
+  }
 </script>
