--- a/src/components/Languages.astro
+++ b/src/components/Languages.astro
@@ -1,13 +1,10 @@
 ---
 import { LANGUAGES } from '../i18n/ui';
-import { getRouteFromUrl, useTranslatedPath, getLangFromUrl } from '../i18n/utils';
+import { getLangFromUrl } from '../i18n/utils';
 
-const route = getRouteFromUrl(Astro.url);
 const lang = getLangFromUrl(Astro.url);
-const translatePath = useTranslatedPath(lang);
 
 const currentLocaleData = LANGUAGES[lang]
-const otherLocales = Object.values(LANGUAGES)
 ---
 <section class="flex justify-between dark:text-site-50">
     <a href="/en">
