--- a/src/components/ThemeColor.astro
+++ b/src/components/ThemeColor.astro
@@ -1,6 +1,14 @@
 ---
-import Palette from './logos/Palette.astro'
+import Moon from './logos/Moon.astro'
+import Sun from './logos/Sun.astro'
 ---
-<h3 class="flex hidden">
-    <Palette />
-</h3>
+<label class="inline-flex items-center cursor-pointer">
+  <h3 class="mr-3 text-site-200 dark:text-site-50">
+    <Sun />
+  </h3>
+  <input type="checkbox" value="" class="sr-only peer" id="dark-mode" />
+  <figure class="neumorphism-pressed-toggle relative w-14 h-8 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-site-200 dark:peer-focus:ring-site-200 rounded-full peer dark:bg-[#232323] peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-site-300 dark:peer-checked:after:border-[#232323] after:content-[''] after:absolute after:top-[4px] after:start-[6px] after:bg-site-300 dark:after:bg-[#232323] after:border-site-300 dark:after:border-site-300 after:border after:rounded-full after:w-6 after:h-6 after:transition-all dark:border-[#232323] peer-checked:bg-site-200"></figure>
+  <h3 class="ml-3 dark:text-site-200">
+    <Moon />
+  </h3>
+</label>
