--- a/src/components/PersonalPicture.astro
+++ b/src/components/PersonalPicture.astro
@@ -1,3 +1,7 @@
+---
+import MauGarOla from '../assets/MauGarOla.webp'
+---
+
 <figure {...Astro.props}>
-    <img class="rounded-full origin-bottom scale-110" src=`../../public/MauGarOla.webp` alt="Photo of Mauricio G. Olagary smilin in a dark-blue suit.">
+    <img class="rounded-full origin-bottom scale-110" src={MauGarOla.src} alt="Photo of Mauricio G. Olagary smilin in a dark-blue suit.">
 </figure>
