--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,14 +1,10 @@
 ---
-interface Props {
-    title: string
-    description: string
-    class?: string
-}
+import { Image } from 'astro:assets'
 
-const { title, description } = Astro.props
+const { title, description, image } = Astro.props
 ---
-<div class=`${Astro.props.class} neumorphism-pressed rounded-2xl p-3 sm:p-5 mb-5 md:mb-0`>
-    <img class="h-auto max-w-full rounded-lg" src=`../../public/${title}.webp` alt=`Screen shot of the preject ${title}`>
+<div class=`${Astro.props.class} neumorphism-pressed rounded-2xl p-3 sm:p-5 md:mb-0 text-site-300 dark:text-site-50 `>
+    <Image src={ image } alt=`Screen shot of the preject ${title}` class="h-auto max-w-full rounded-lg" />
     <h1 class="mt-6 text-site-200 font-bold text-md sm:text-2xl">{title}</h1>
     <p class="mt-3 sm:text-lg lg:text-3xl">{description}</p>
 </div>
